add content to discussion

--- a/04_discussion.Rmd
+++ b/04_discussion.Rmd
@@ -1,13 +1,11 @@
 # Discussion
 
-(*first paragraph: summary sentences and some management goal stuff)
-
-By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation of the distribution and patterns of modifications across the region illustrate the different threats that seagrass meadows face based on their location. Few meadows had no adjacent modifications, but even then, shoreline modifications are only one type of activity that can threaten a seagrass meadow. If an area including a meadow is selected for management, then its likely the shoreline modifications will have to be considered, and the type of management action will vary with the type of modification. For example, limiting forestry activities vs. managing activities on private land and managing the flow of sewage outflow. Consider management goals of protecting the most natural meadows and how this might change given the spatial distribution of activities and other information (e.g. biodiversity in meadows, connectivity)
-See how Emily's EBSA paper discusses some of this.
+By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different threats that seagrass meadows face based on their location. If an area including a meadow is selected for management (e.g. an EBSA), then its likely the shoreline modifications will have to be considered for possible mitigation of impacts. Knowing the spatial distribution of modifications is important because the management action will vary with the type of modification. While areas of naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows threatened by shoreline activities [@cristiani2022; @Rubidge2020].
 
 (*2nd: vulnerability score variability)
 - This work can be incorporated into CI frameworks (e.g. REFS)
 - incorporate vulnerability scores to specific types of modifications (cite CI research)
+- We also acknowledge that shoreline modifications are only one type...(this could go in the next paragraph perhaps)
 - some stuff from my thesis: "managing seagrass habitat and associated species in a landscape context, in which patterns of distribution, dispersal, and impacts will interact to influence regional management strategies (Murphy et al. 2021b). Although eelgrass is declining globally (Dunic et al. 2021), eelgrass in nearby Puget Sound, Washington is stable and resilient overall, despite a significant increase in local human and climactic stressors (Shelton et al. 2016). Assessing the relevance of managing for human impacts in the Salish Sea will therefore require a deeper understanding of seagrass and invertebrate responses to stressors and the mechanisms (e.g., dispersal) that allow for resilience to these stressors. Ultimately, refining and validating our models will increase their utility and promote their incorporation into broader marine spatial planning efforts."
 
 (*3rd: assumptions and limitations)
