--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -235,3 +235,15 @@
   pages = {vi + 43 p},
   file = {C\:\\Users\\cristianij\\Zotero\\storage\\87Y5BPJB\\Vandermeulen, Surette, Skinner_2012_Responses of Eelgrass (iZostera marina L.i) to stress.pdf},
 }
+@Thesis{cristiani2022,
+  title = {The Connectivity of Coastal Marine Populations : Uncovering Patterns of Dispersal and the Implications for Management},
+  shorttitle = {The Connectivity of Coastal Marine Populations},
+  author = {John Cristiani},
+  date = {2022},
+  institution = {{University of British Columbia}},
+  url = {https://doi.library.ubc.ca/10.14288/1.0417471},
+  urldate = {2022-10-07},
+  abstract = {Dispersal is the ecological process of organismal movement away from the location of birth. Emerging from the process of dispersal is the concept of connectivity, in which animal movement links spatially distinct populations, thus generating a landscape-scale pattern from process. Quantifying connectivity is a central challenge in marine ecology, with implications for our understanding of population dynamics and the effective management of biodiversity. Yet, there remains a limited understanding of connectivity for many marine ecosystems in terms of the dispersal patterns that emerge from the influence of physical seascape features and biological traits. This knowledge gap presents an opportunity to assess the connectivity of understudied coastal ecosystems at novel spatial and temporal scales. In this thesis, I model the potential dispersal and connectivity of coastal marine species on the Pacific coast of Canada. In Chapter 2, I identify and evaluate connectivity patterns of the invertebrate community associated with seagrass (Zostera marina) habitat. I uncover the spatial and temporal scale of networks of habitat connected by dispersal, and I identify the contribution of individual seagrass habitat patches to maintaining overall seagrass network connectivity. In Chapter 3, I assess the connectivity of the existing Marine Protected Area (MPA) network for a variety of nearshore invertebrate species, and I find that the majority of MPAs are connected and support persistent populations. In Chapter 4, I explore how connectivity can cause cascading effects of human activities that impact seagrass meadows by altering invertebrate dispersal thereby indirectly affecting other meadows in the seascape. I find that robust dispersal connections can support the persistence of most populations despite the negative effects from human activities. In sum, my thesis generates predictions on the spatial scale of dispersal, and it highlights the ecological insights gained from analyzing the emergent connectivity as a network. Together, the methodological framework and results from this thesis provide essential ecological knowledge to support our understanding of biodiversity and aid in the management and conservation of marine ecosystems.},
+  langid = {english},
+  version = {1},
+}
