add discussion content

--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -247,3 +247,79 @@
   langid = {english},
   version = {1},
 }
+@Article{Teck2010,
+  title = {Using Expert Judgement to Estimate Marine Ecosystem Vulnerability in the {{California Current}}},
+  author = {Sj Teck and Bs Halpern and Cv Kappel},
+  date = {2010},
+  journaltitle = {Ecological …},
+  volume = {20},
+  number = {5},
+  eprint = {20666257},
+  eprinttype = {pmid},
+  pages = {1--16},
+  issn = {10510761},
+  doi = {10.1890/09-1173.1},
+  abstract = {As resource management and conservation efforts move toward multi-sector, ecosystem-based approaches, we need methods for comparing the varying responses of ecosystems to the impacts of human activities in order to prioritize management efforts, allocate limited resources, and understand cumulative effects. Given the number and variety of human activities affecting ecosystems, relatively few empirical studies are adequately comprehensive to inform these decisions. Consequently, management often turns to expert judgment for information. Drawing on methods from decision science, we offer a method for eliciting expert judgment to (1) quantitatively estimate the relative vulnerability of ecosystems to stressors, (2) help prioritize the management of stressors across multiple ecosystems, (3) evaluate how experts give weight to different criteria to characterize vulnerability of ecosystems to anthropogenic stressors, and (4) identify key knowledge gaps. We applied this method to the California Current region in order to evaluate the relative vulnerability of 19 marine ecosystems to 53 stressors associated with human activities, based on surveys from 107 experts. When judging the relative vulnerability of ecosystems to stressors, we found that experts primarily considered two criteria: the ecosystem's resistance to the stressor and the number of species or trophic levels affected. Four intertidal ecosystems (mudflat, beach, salt marsh, and rocky intertidal) were judged most vulnerable to the suite of human activities evaluated here. The highest vulnerability rankings for coastal ecosystems were invasive species, ocean acidification, sea temperature change, sea level rise, and habitat alteration from coastal engineering, while offshore ecosystems were assessed to be most vulnerable to ocean acidification, demersal destructive fishing, and shipwrecks. These results provide a quantitative, transparent, and repeatable assessment of relative vulnerability across ecosystems to any ongoing or emerging human activity. Combining these results with data on the spatial distribution and intensity of human activities provides a systematic foundation for ecosystem-based management.},
+  isbn = {1051-0761},
+  keywords = {anthropogenic impact,based management,coastal and offshore ecosystems,ecological recovery,ecosystem stressor,ecosystem vulnerability,ecosystem-,human impact,resilience,threat assessment},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\6V32US7U\\m-api-2a33ea17-77eb-de5b-654c-fdb246935775.pdf},
+}
+@Article{ClarkeMurray2016,
+  title = {Pilot Ecosystem Risk Assessment to Assess Cumulative Risk to Species in the {{Pacific North Coast Integrated Management Area}} ({{PNCIMA}})},
+  author = {Cathryn {Clarke Murray} and Megan E Mach and Miriam O},
+  date = {2016},
+  journaltitle = {Canadian Science Advisory Secretariat},
+  abstract = {The challenge of managing areas with diverse human activities and effectively evaluating environmental, social and economic trade-offs requires Ecosystem-based Oceans Management. A pilot ecological risk assessment for the Pacific North Coast Integrated Management Area (PNCIMA) was conducted to test the effectiveness of an ecological risk assessment framework developed by O et al. (2015). During the scoping phase, a subset of 17 significant ecological components (SECs) was chosen to represent major functional groups in PNCIMA based on their data availability. Marine, land-based and global activities currently occurring within the area and their associated stressors were identified using an interaction matrix with accompanying evidence tables because Pathways of Effects models were under development and therefore unavailable. A subset of stressors was evaluated (76 in total) for the identified activities. Risk was evaluated using four variables: Spatial scale, Temporal scale, Load, and Consequence. Scoring was based on literature review and an uncertainty score assigned for each variable taking into consideration data availability, quality and scientific consensus. Risk scores for each stressor-SEC combination were calculated using one of two methods: 1. Binned exposure using the methods as outlined by O et al. (2015); and 2. Uncertainty incorporation using Monte Carlo simulation to directly incorporate the uncertainty scores in the risk calculation. Cumulative risk for each SEC was calculated by summing the risk scores for each SEC. Using the uncertainty incorporation method, the SECs with the highest cumulative risk were Dungeness Crab, Salmon, Sponges, and Seagrasses. The highest ranking stressors across all SECs were trawling-related and most of the highest ranked stressors for each SEC were trawl- related. The relative ranking of risk was similar between the two risk calculation methods but the Uncertainty Incorporation showed where uncertainty was highest between exposure and consequence, and could be used to prioritize research and focus management efforts. The Qualitative Level One ecological risk assessment was found to be an effective triage tool, providing a relative ranking of SECs and stressors. However, the current pilot project is not a complete risk assessment for PNCIMA because it is based on a subset of SECs and stressors affecting PNCIMA and the resulting scores have not been vetted by experts. Therefore the results should not be used for policy or management decisions at this stage},
+  issue = {June},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\EQ5EPTKL\\Clarke Murray, Mach, O - 2016 - Pilot ecosystem risk assessment to assess cumulative risk to species in the Pacific North Coast Integrat.pdf},
+}
+
+@Article{ClarkeMurray2020,
+  title = {A {{Review}} of {{Cumulative Effects Research}} and {{Assessment}} in {{Fisheries}} and {{A Review}} of {{Cumulative Effects Research}} and {{Assessment}} in {{Fisheries}} and {{Oceans Canada}}},
+  author = {Cathryn {Clarke Murray} and Lucie Hannah and Hannah Locke},
+  date = {2020},
+  journaltitle = {Can. Tech. Rep. Fish. Aquat. Sci.},
+  volume = {3357},
+  pages = {vii + 51 p.},
+  isbn = {9780660338316},
+  issue = {February},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\H6DNGR87\\Clarke Murray, Hannah, Locke_2020_A Review of Cumulative Effects Research and Assessment in Fisheries and A Review of Cumulative Effects.pdf},
+}
+
+@Article{Murphy2022,
+  title = {Incorporating Anthropogenic Thresholds to Improve Understanding of Cumulative Effects on Seagrass Beds},
+  author = {Grace E.P. Murphy and Noreen E Kelly and Heike K Lotze and Melisa C Wong},
+  editor = {Irene Gregory-Eaves},
+  date = {2022-01-01},
+  journaltitle = {FACETS},
+  volume = {7},
+  pages = {966--987},
+  issn = {2371-1671},
+  doi = {10.1139/facets-2021-0130},
+  url = {https://facetsjournal.com/doi/10.1139/facets-2021-0130},
+  abstract = {Cumulative human impact analysis is a promising management tool to estimate the impacts of stressors on ecosystems caused by multiple human activities. However, connecting cumulative impact scores to actual ecosystem change at appropriate spatial scales remains challenging. Here, we calculated cumulative effects (CE) scores for 187 seagrass beds in Atlantic Canada that accounts for both bay-scale and local-scale anthropogenic activities. We then developed a CE threshold to evaluate where degradation of seagrass beds from multiple human activities is more likely. Overall, the CE score was the best predictor of human impacts for seagrass beds. Locations with high watershed land alteration and nitrogen loading had the highest CE scores; however, we also identified seagrass beds with high CE scores in regions characterized by generally low levels of human activities. Forty-nine seagrass beds exceeded the CE threshold and, of these, 86\% had CE scores that were influenced by three or more stressors that cumulatively amounted to a large score. This CE threshold approach can provide a simplified metric to identify areas where management of cumulative effects should be prioritized and further highlights the need to consider multiple human activities when assessing anthropogenic impacts to coastal habitats.},
+  keywords = {anthropogenic impacts,coastal,coastal management,conservation planning,cumulative effects,ecosystems,human activities,seagrass,thresholds,zostera marina},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\C5DASK22\\Murphy et al._2022_Incorporating anthropogenic thresholds to improve understanding of cumulative effects on seagrass beds.pdf},
+}
+@Article{Dunic2021,
+  title = {Long‐term Declines and Recovery of Meadow Area across the World’s Seagrass Bioregions},
+  author = {Jillian C. Dunic and Christopher J. Brown and Rod M. Connolly and Mischa P. Turschwell and Isabelle M. C{\^o}t{\a'e}},
+  date = {2021-05-15},
+  journaltitle = {Global Change Biology},
+  pages = {gcb.15684},
+  issn = {1354-1013},
+  doi = {10.1111/gcb.15684},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/gcb.15684},
+  isbn = {0000000272},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\WBURBAQS\\Dunic et al._2021_Long‐term declines and recovery of meadow area across the world’s seagrass bioregions(2).pdf},
+}
+@Article{Shelton2016,
+  title = {Forty Years of Seagrass Population Stability and Resilience in an Urbanizing Estuary.},
+  author = {A.O. Shelton and T.B. Francis and B.E. Feist and G.D. Williams and A. Lindquist and P. Levin},
+  date = {2016},
+  journaltitle = {Journal of Ecology},
+  pages = {1--13},
+  issn = {00220477},
+  doi = {10.1111/1365-2745.12682},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\PWPJ7B6P\\2016-Forty_years_of_seagrass_population_stability_and_resilience_in_an_urbanizing_estuary..pdf},
+}
