--- a/04_discussion.Rmd
+++ b/04_discussion.Rmd
@@ -1,23 +1,12 @@
 # Discussion
 
-By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different threats that seagrass meadows face based on their location. If an area including a meadow is selected for management (e.g. an EBSA), then its likely the shoreline modifications will have to be considered for possible mitigation of impacts. Knowing the spatial distribution of modifications is important because the management action will vary with the type of modification. While areas of naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows threatened by shoreline activities [@cristiani2022; @Rubidge2020].
+By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different threats that seagrass meadows face based on their location. If an area including a meadow is selected for management (e.g. an EBSA), then it's likely the shoreline modifications will have to be considered for possible mitigation of impacts. Knowing the spatial distribution of modifications is important because the management action will vary with the type of modification. While areas of naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows that are threatened by shoreline activities [@cristiani2022; @Rubidge2020].
 
-(*2nd: vulnerability score variability)
-- This work can be incorporated into CI frameworks (e.g. REFS)
-- incorporate vulnerability scores to specific types of modifications (cite CI research)
-- We also acknowledge that shoreline modifications are only one type...(this could go in the next paragraph perhaps)
-- some stuff from my thesis: "managing seagrass habitat and associated species in a landscape context, in which patterns of distribution, dispersal, and impacts will interact to influence regional management strategies (Murphy et al. 2021b). Although eelgrass is declining globally (Dunic et al. 2021), eelgrass in nearby Puget Sound, Washington is stable and resilient overall, despite a significant increase in local human and climactic stressors (Shelton et al. 2016). Assessing the relevance of managing for human impacts in the Salish Sea will therefore require a deeper understanding of seagrass and invertebrate responses to stressors and the mechanisms (e.g., dispersal) that allow for resilience to these stressors. Ultimately, refining and validating our models will increase their utility and promote their incorporation into broader marine spatial planning efforts."
+This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of a certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass. However, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022].  
 
-(*3rd: assumptions and limitations)
-
-When using and adapting the data for future studies, certain assumptions need to be considered.
-- If the modification exists behind some vegetation then the impact could be less.
-- We use a uniform buffer, but there is a likely a distance decay for some of these activities.
-- No point measurements in field to confirm the severity of impacts of different modifications. Some activities are well regulated in Canada, like logging, and there may be very minimal impact. Whereas, drainage of waste and stormwater from seemingly well vegetated residential areas may have a high impact but hard measure.
-- Meadows that aren’t right on the coast may not experience the same level of impacts as an intertidal meadow.
-- Ultimately, quantifying severity and vulnerability will increase the utility of this dataset for future marine spatial planning and management efforts. (should also work in to this idea something about this is connectivity terrestrial landscape features with seascape ecology.)
+Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While eelgrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea, eelgrass has been resilient despite an increase in human activities [@Shelton2016]. Understanding exactly which activities may be impacting eelgrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of eelgrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
 
 
 # Data availability
-Link to code in github repo
-Link to dataset wherever it gets hosted
+*Link to code in github repo*\
+*Link to dataset wherever it gets hosted*
