--- a/02_methods.Rmd
+++ b/02_methods.Rmd
@@ -4,20 +4,20 @@
 
 Eelgrass (*Z. marina*) is the primary subtidal and intertidal meadow-forming seagrass in British Columbia. Meadows may also consist of the non-native seagrass, *Zostera japonica*, in the intertidal zone. Seagrass occurs to depths of 10 meters and can form meadows many km^2^ in size [@Murphy2021a]. We used a spatial dataset of seagrass in the Salish Sea compiled in @Cristiani2021, which consists of surveyed and modeled data from a variety of government and non-governmental sources. Due to the combination of data with varying collection methodologies and error, there is high uncertainty in the dataset, and it is best used for coarse estimates of extent. The dataset includes 685 spatially distinct meadows across the Strait of Georgia Bioregion as well as in the southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion (Figure \@ref(fig:studyareafig)).
 
-```{r studyareafig, fig.pos="H", fig.cap = "Study area. Finish caption on seagrass and bioregions."}
+```{r studyareafig, fig.pos="H", fig.cap = "Seagrass meadows in the Strait of Georgia Bioregion and southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion. The outlines of the meadow polygons are exaggerated for visualization purposes."}
 knitr::include_graphics(here::here("figures/01_studyarea.png"))
 ```
 
 ## Shoreline area adjacent to seagrass meadows
 
-Past guidelines on the width of marine riparian buffer zones for protecting sensitive habitat typically range from 50-150 meters [@Lemieux2004; @Levings2001]. We followed the methodology in a similar study of anthropogenic impacts [@Iacarella2018] and examined shoreline modifications within 100 m of the coastline adjacent to each seagrass meadow. Quantifying modifications within a buffer zone requires generating consistent buffers from all meadows onto land. The perimeters of meadows, however, do not always exactly border the shoreline due to variable mapping accuracies and errors, as well as some meadows only existing in the subtidal zone. This results in slighlty different buffer extents on to land. Aside from a few exceptions, the majority of meadows are in close proximity to a coastline, and therefore, to create consistent width buffers on land we first adjusted the perimeter of meadows to match the coastline using digitization tools in ArcGIS.
+Previous guidelines on the width of marine riparian buffer zones for protecting sensitive habitat typically range from 50-150 meters [@Lemieux2004; @Levings2001]. We followed the methodology in a similar study of anthropogenic impacts [@Iacarella2018] and examined shoreline modifications within 100 m of the coastline adjacent to each seagrass meadow. Quantifying modifications within a buffer zone requires generating consistent buffers from all meadows onto land. The perimeters of meadows, however, do not always exactly border the shoreline due to variable mapping accuracies and errors, as well as some meadows only existing in the subtidal zone. This would result in slightly different buffer extents on to land. Aside from a few exceptions, the majority of meadows are in close proximity to a coastline, and therefore, to create consistent width buffers on land we first adjusted the perimeter of meadows to match the coastline using digitization tools in ArcGIS.
 
 
-## Shoreline modifications
+## Quantifying shoreline modifications
 
-To quantify shoreline modification adjacent to seagrass, we identified any structures (e.g. buildings, houses) and areas de-vegetated from their natural state (e.g. lawns, logged areas, agriculture, armoured shoreline) within the 100 meter buffer. De-vegetated areas can increase nutrient run-off from agricultural areas and sewage outfalls potentially resulting in eutrophication [@hauxwell2003; @Quiros2017; @vandermeulen2005]. Hardened and de-vegated areas may also increase the outflow of sedimentation resulting in decreased light levels in seagrass meadows [@Dethier2016; @Todd2019; @Vandermeulen2012].
+To quantify shoreline modification adjacent to seagrass, we identified any structures (e.g. buildings, houses) and areas de-vegetated from their natural state (e.g. lawns, logged areas, agriculture, armoured shoreline) within the 100 meter buffer. De-vegetated areas can increase nutrient run-off from agricultural areas and sewage outfalls, potentially resulting in eutrophication [@hauxwell2003; @Quiros2017; @vandermeulen2005]. Hardened and de-vegated areas may also increase the outflow of sedimentation resulting in decreased light levels in seagrass meadows [@Dethier2016; @Todd2019; @Vandermeulen2012].
 
-Shoreline modifications were digitized from satellite and aerial imagery in Google Earth Pro. The most recent imagery available was used, but the dates of the imagery varied across the study area. The majority of roads were included using an existing provincial dataset (Province of British Columbia - Digital Road Atlas). This dataset consists of linear features which were buffered using the number of lanes and standard lane widths. Modifications were classified into six categories: road, residential, cropland, industrial, greenspace, unclear. Within each category, an additional descriptor was also listed (Table \@ref(tab:modifications)). Overwater structures (e.g. floathomes, docks, aquaculture) were not considered to be shoreline modifications as these are associated with a different suite of impacts (e.g. shading, boat traffic), and these features were captured in a separate study.
+Shoreline modifications were digitized from satellite and aerial imagery in Google Earth Pro. The most recent imagery available was used, but the dates of the imagery varied across the study area. The majority of roads were included using an existing provincial dataset (Province of British Columbia - Digital Road Atlas). This dataset consists of linear features which were buffered using the number of lanes and standard lane widths. Modifications were classified into six categories: road, residential, cropland, industrial, greenspace, and unclear. Within each category, an additional descriptor was also listed (Table \@ref(tab:modifications)). Overwater structures (e.g. floathomes, docks, aquaculture) were not considered to be shoreline modifications as these are associated with a different suite of impacts (e.g. shading, boat traffic), and these features were captured in separate studies [@cristiani2022; @Iacarella2019].
 
 To quantify the overall level of shoreline modification we totaled the area of all modification types per buffered area and calculated the percent of the buffered area that is modified. The percent modified was then associated back with the adjacent seagrass meadow. 
 
@@ -27,7 +27,7 @@ d <- data.frame(
   Subcategory_descriptors = c("paved; dirt; rail", "house; RV; lighthouse", "logging; airport; general development; parking; storage; marina; church; electrical; ferry; hospital; train yard; shipping", "crop; fishfarm", "cleared; campground; golf; park; recreation", "unclear") 
   )
 
-kbl(d, "latex", align="cl", booktabs = TRUE, caption = "Shoreline modification classifications and descriptors",
+kbl(d, "latex", align="cl", booktabs = TRUE, caption = "Shoreline modification primary classifications and additional subcategory descriptors.",
     col.names = c("Modification", "Subcategory descriptors"),
     linesep = "\\addlinespace",
     position='h'
