--- a/04_discussion.Rmd
+++ b/04_discussion.Rmd
@@ -1,12 +1,13 @@
 # Discussion
 
-By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different threats that seagrass meadows face based on their location. If an area including a meadow is selected for management (e.g. an EBSA), then it's likely the shoreline modifications will have to be considered for possible mitigation of impacts. Knowing the spatial distribution of modifications is important because the management action will vary with the type of modification. While areas of naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows that are threatened by shoreline activities [@cristiani2022; @Rubidge2020].
+By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different shoreline threats that seagrass meadows may face based on their location. While areas of high naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows that are threatened by shoreline activities [@cristiani2022; @Rubidge2020]. If an area including a meadow is selected for management (e.g. an EBSA), then it's likely the shoreline modifications will have to be considered for possible mitigation of impacts. It will then be important to know the spatial distribution of modifications because the management action will vary with the type of modification.
 
-This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of a certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass. However, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022].  
+This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of a certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass, however, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022].  
 
-Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While eelgrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea, eelgrass has been resilient despite an increase in human activities [@Shelton2016]. Understanding exactly which activities may be impacting eelgrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of eelgrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
+Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While seagrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea, seagrass has been resilient despite an increase in human activities [@Shelton2016]. To further enhance successful seagrass management, understanding exactly which activities may be impacting seagrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of seagrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
 
 
 # Data availability
-*Link to code in github repo*\
+
+The code used to generate the dataset for this study is available at <Link to code in github repo>. *(perhaps consider moving just the one script to the report repo)*\
 *Link to dataset wherever it gets hosted*
