--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -323,3 +323,20 @@
   doi = {10.1111/1365-2745.12682},
   file = {C\:\\Users\\cristianij\\Zotero\\storage\\PWPJ7B6P\\2016-Forty_years_of_seagrass_population_stability_and_resilience_in_an_urbanizing_estuary..pdf},
 }
+@Article{Iacarella2019,
+  title = {Biotic Exchange from Movement of ‘Static’ Maritime Structures},
+  author = {Josephine C. Iacarella and Ian C. Davidson and Anya Dunham},
+  date = {2019},
+  journaltitle = {Biological Invasions},
+  volume = {21},
+  number = {4},
+  pages = {1131--1141},
+  publisher = {{Springer International Publishing}},
+  issn = {15731464},
+  doi = {10.1007/s10530-018-1888-8},
+  url = {https://doi.org/10.1007/s10530-018-1888-8},
+  abstract = {Coastal infrastructure provides extensive habitat for marine nonindigenous species (“NIS”), especially biofouling species. Ecosystem transplants can arise when static maritime structures (“SMS”) are relocated under slow towing speeds following long periods of biofouling accumulation. Translocations of SMS occur more often than acknowledged and represent a high-risk vector of marine NIS that is largely overlooked and unregulated. We compiled geolocations and movement patterns for oil platforms, derelict/obsolete vessels, barges, dry docks, floating lodges, homes and docks, aquaculture gear and buoys for the NE Pacific coast. We related these data to NIS richness within the region and to global examples of SMS movement. Our review and synthesis of SMS, paired with biofouling surveys before and after dock towing events, reveal the growing NIS vector opportunities resulting from sprawling coastal infrastructure. As coastal development continues apace in the Anthropocene, this emerging management challenge will require strong frameworks and workable solutions for a global issue that currently lacks incentives to prevent species transfers and invasions.},
+  isbn = {0123456789},
+  keywords = {Artificial structures,Biofouling,Marine,Nonindigenous species,Spread,Vectors},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\CEVWXFU6\\Iacarella, Davidson, Dunham_2019_Biotic exchange from movement of ‘static’ maritime structures.pdf},
+}
