--- a/03_results.Rmd
+++ b/03_results.Rmd
@@ -1,17 +1,21 @@
 # Results
 
-The spatial distribution of shoreline modifications varied across the region. Examples of the extent and diversity of modifications are shown in Figure \@ref(fig:exampleareas), and the full dataset is accessible online (see Data availability section). As expected, the seagrass meadows with the highest total levels of adjacent shoreline modification occurred near population centers (Figure \@ref(fig:percentmod)). The lowest levels of modification occurred near islands and in the northern part of the study area (i.e. Johnstone Strait). The dominant modification type tended to vary by latitude. For example, there is more coastal agriculture in the south and more logging in the north (Figure ).      
+The spatial distribution of shoreline modifications varied across the region. Examples of the extent and diversity of modifications are shown in Figure \@ref(fig:exampleareas), and the full dataset is accessible online (see Data availability section). As expected, the seagrass meadows with the highest total levels of adjacent shoreline modification occurred near population centers (Figure \@ref(fig:percentmod)). The lowest levels of modification occurred near smaller islands and in the northern part of the study area (i.e. Johnstone Strait). The dominant modification type tended to vary by latitude. For example, there is more coastal agriculture in the south and more logging in the north (Figure \@ref(fig:percentmodpertype)).      
 
 (*TODO: make colors more bold in example figure.*)
 (*TODO: add cities and towns to overall figure*)
 (*TODO: do a full page figure for the 5 types. If these come after the total one, then I could try to fit them on one page.*)
 
 
-```{r exampleareas, fig.pos="H", fig.cap = "Shoreline modifications within 100 meter buffered areas. The six selected areas are shown for example and do not imply any significance over other areas."}
+```{r exampleareas, fig.pos="H", fig.cap = "Shoreline modifications within buffered areas adjacent to seagrass meadows. All buffers are 100 meters wide, as measured from the coastline. The six selected areas are shown for example and do not imply any significance over other areas."}
 knitr::include_graphics(here::here("figures/02_shorelinemod_examples.png"))
 ```
 
 
-```{r percentmod, fig.pos="H", fig.cap = "The percentage of the shoreline buffered area that is modified."}
+```{r percentmod, fig.pos="H", fig.cap = "The modified percent of the shoreline buffered area adjacent to each seagrass meadow."}
+knitr::include_graphics(here::here("figures/03_shorelinemod_percentage.png"))
+```
+
+```{r percentmodpertype, fig.pos="H", fig.cap = "The modified percent of the shoreline buffered area adjacent to each seagrass meadow by modification type: (a) agriculture, (b) ... ."}
 knitr::include_graphics(here::here("figures/03_shorelinemod_percentage.png"))
 ```
