--- a/shorelinemod_report.Rmd
+++ b/shorelinemod_report.Rmd
@@ -1,11 +1,11 @@
 
 # Introduction
 
-The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, residential development, forestry, and shoreline hardening create pressures on the marine environment. A modified shoreline may alter levels of sedimentation, nutrient runoff, pollution, and wave energy in the nearshore environment [@Dethier2016; @Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, these pressures can impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass meadows would allow us to better characterize potential ecological impacts to individual seagrass meadows and understand seagrass ecosystem dynamics in a broader seascape context.
+The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, residential development, and logging can create pressures on the marine environment. A modified shoreline may exacerbate the impacts of these broad scale activities by altering levels of sedimentation, nutrient runoff, and pollution in the nearshore environment [@Dethier2016; @Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, modifications that harden the shoreline may decrease the ecosystem services that these habitats provide, e.g., buffering from wave energy and sea level rise (REFS). Furthermore, these pressures can impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass meadows would allow us to better characterize potential ecological impacts to individual seagrass meadows and to understand seagrass ecosystem dynamics in a broader seascape context.
 
 Assessing human activities for an entire coastal region is generally done at broad spatial scales. For example, impact mapping and assessments for all of BC have been done with a 2 km+ spatial resolution [@ClarkeMurray2015], which exceeds the size of many seagrass meadows as well as the size of the shoreline region which could be locally impacting a meadow. In addition, many spatially distinct meadows may exist close together, where only a high resolution assessment of shoreline modifications could distinguish the potential impacts between them. Fine-scale assessments of impacts to seagrass exist for the BC coast, but these are typically done in detail for only a few meadows due to logistical constraints [@Iacarella2018; @Nagel2020]. Ideally, impacts are quantified at broad and fine scales for entire regions. For example, along the Atlantic coast of Canada @Murphy2019 quantified activities at the Bay scale (i.e., activities occurring in the watershed or ocean but not overlapping with the meadow) and the local scale (occurring in or in close proximity to the meadow) for 180 seagrass meadows across two bioregions. Together, these analyses allow us to better understand the variation in anthropogenic influences on seagrass meadows and the seagrass-associated biological communities across bioregions and at multiple scales relevant to management efforts.
 
-The objective of this project is to map and quantify the shoreline modifications adjacent to all known seagrass meadows in the Strait of Georgia Bioregion of British Columbia - a subset of the Salish Sea. Eelgrass (*Zostera marina*, the dominant habitat-forming seagrass species) is a conservation priority in the Northern Shelf Bioregion of British Columbia [@DFO2019; @Gale2019], and eelgrass meadows have been designated as Ecologically and Biologically Significant Areas (EBSA) due to their productivity, sensitivity, and support for biological diversity [@Rubidge2020]. Therefore, it is important to acquire information on human activities to predict impacts and categorize meadows by their degree of naturalness, as areas of high naturalness may be a priority for additional management and conservation efforts [@UNCBD2008]. While shoreline modifications do not represent all of the human activities potentially threatening seagrass, a high resolution dataset is currently needed and can complement other existing human impact data.
+The objective of this project is to map and quantify the shoreline modifications adjacent to all known seagrass meadows in the Strait of Georgia Bioregion of British Columbia - a subset of the Salish Sea [@dfo2009]. Eelgrass (*Zostera marina*, the dominant habitat-forming seagrass species) is a conservation priority in the Northern Shelf Bioregion of British Columbia [@DFO2019; @Gale2019], and eelgrass meadows have been designated as Ecologically and Biologically Significant Areas (EBSA) due to their productivity, sensitivity, and support for biological diversity [@Rubidge2020]. Therefore, it is important to acquire information on human activities to predict impacts and categorize meadows by their degree of naturalness, as areas of high naturalness may be a priority for additional management and conservation efforts [@UNCBD2008]. While shoreline modifications do not represent all of the human activities potentially threatening seagrass, a high resolution dataset is currently needed and can complement other existing human impact data.
 
 # Methods
 
@@ -85,4 +85,32 @@ The code used to generate the dataset for this study is available at <Link to co
 \setlength{\parindent}{-0.2in}
 \setlength{\leftskip}{0.2in}
 \setlength{\parskip}{8pt}
+
+
+<!-- If you want to references to appear somewhere before the end, add: -->
+<div id="refs"></div>
+<!-- Otherwise, it gets placed after the appendices -->
+
+`r if(knitr:::is_latex_output()) '% begin csasdown appendix'`
+`r if(!knitr:::is_latex_output()) '# (APPENDIX) Appendix {-}'`
+\clearpage
+# THE FIRST APPENDIX {#app:first-appendix}
+
+Appendices can be in one file, or if they are larger than a couple of pages you should add a new file for each new appendix. In the first appendix, you **must** include two special lines of code at the top to tell `csasdown` that you are now numbering sections as appendices. Look in `05_appendices.Rmd` to see these. The last line of your last appendix **must** be another special line of code which tells `csasdown` to end the appendices sections.
+
+\clearpage
+
+# THE SECOND APPENDIX, FOR FUN {#app:second-appendix}
+
+The label `#app:` in the appendix section headers tell `csasdown` to start a new appendix, and the next letter in the alphabet will be used for the appendix, and prepended to figure and table names.
+
+```{r meadowDiff, fig.pos="H", fig.cap = "Only differences are shown. Only spatially distinct."}
+knitr::include_graphics(here::here("figures/Seagrass_dataset_differences_1.png"))
+```
+
+```{r meadowDiffShorezone, fig.pos="H", fig.cap = "Full dataset shown. Just distinct parts of shorezone."}
+knitr::include_graphics(here::here("figures/Seagrass_dataset_differences_2.png"))
+```
+
+`r if(knitr:::is_latex_output()) '% end csasdown appendix'`
 
