--- a/shorelinemod_report.Rmd
+++ b/shorelinemod_report.Rmd
@@ -1,7 +1,7 @@
 
 # Introduction
 
-The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, residential development, and logging can create pressures on the marine environment. A modified shoreline may exacerbate the impacts of these broad scale activities by altering levels of sedimentation, nutrient runoff, and pollution in the nearshore environment [@Dethier2016; @Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, modifications that harden the shoreline may decrease the ecosystem services that these habitats provide, e.g., buffering from wave energy and sea level rise (REFS). Furthermore, these pressures can impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass meadows would allow us to better characterize potential ecological impacts to individual seagrass meadows and to understand seagrass ecosystem dynamics in a broader seascape context.
+The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, residential development, and logging can create pressures on the marine environment. A modified shoreline may exacerbate the impacts of these broad scale activities by altering levels of sedimentation, nutrient runoff, and pollution in the nearshore environment [@Dethier2016; @Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, modifications that harden the shoreline may decrease the ecosystem services that these habitats provide, e.g., buffering from wave energy and sea level rise [@gittman2016; @Robb2014; @shaughnessy2012]. Furthermore, these pressures can impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass meadows would allow us to better characterize potential ecological impacts to individual seagrass meadows and to understand seagrass ecosystem dynamics in a broader seascape context.
 
 Assessing human activities for an entire coastal region is generally done at broad spatial scales. For example, impact mapping and assessments for all of BC have been done with a 2 km+ spatial resolution [@ClarkeMurray2015], which exceeds the size of many seagrass meadows as well as the size of the shoreline region which could be locally impacting a meadow. In addition, many spatially distinct meadows may exist close together, where only a high resolution assessment of shoreline modifications could distinguish the potential impacts between them. Fine-scale assessments of impacts to seagrass exist for the BC coast, but these are typically done in detail for only a few meadows due to logistical constraints [@Iacarella2018; @Nagel2020]. Ideally, impacts are quantified at broad and fine scales for entire regions. For example, along the Atlantic coast of Canada @Murphy2019 quantified activities at the Bay scale (i.e., activities occurring in the watershed or ocean but not overlapping with the meadow) and the local scale (occurring in or in close proximity to the meadow) for 180 seagrass meadows across two bioregions. Together, these analyses allow us to better understand the variation in anthropogenic influences on seagrass meadows and the seagrass-associated biological communities across bioregions and at multiple scales relevant to management efforts.
 
@@ -11,7 +11,28 @@ The objective of this project is to map and quantify the shoreline modifications
 
 ## Seagrass spatial data
 
-Eelgrass (*Z. marina*) is the primary subtidal and intertidal meadow-forming seagrass in British Columbia. Meadows may also consist of the non-native seagrass, *Zostera japonica*, in the intertidal zone. Seagrass occurs to depths of up to 10 meters and can form meadows many km^2^ in size [@Murphy2021a]. We used a spatial dataset of seagrass in the Salish Sea compiled in @Cristiani2021, which consists of surveyed and modeled data from a variety of government and non-governmental sources. Due to the combination of data with varying collection methodologies and error, there is high uncertainty in the dataset, and it is best used for coarse estimates of extent. The dataset includes 685 spatially distinct meadows across the Strait of Georgia Bioregion as well as in the southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion (Figure \@ref(fig:studyareafig)).
+Eelgrass (*Z. marina*) is the primary subtidal and intertidal meadow-forming seagrass in British Columbia. Meadows may also consist of the non-native seagrass, *Zostera japonica*, in the intertidal zone. Seagrass occurs to depths of up to 10 meters and can form meadows many km^2^ in size [@Murphy2021a]. We used a spatial dataset of seagrass in the Salish Sea compiled in 2017 for @Cristiani2021. This dataset consists of surveyed and modeled data from a variety of government and non-governmental sources - primarily the British Columbia Marine Conservation Atlas (BCMCA 2011) and the ShoreZone coastal mapping inventory [@coastalandoceanresources2017] (Table \@ref(tab:eelgrasstable)). Shoreline data are linear features generated from aerial imagery that classify the ecological features of the BC coast including eelgrass. In @CEC2016, these linear features were combined with bathymetric data to generate predictions of eelgrass extent [@reshitnyk2016]. Due to the combination of data with varying collection methodologies and error, there is high uncertainty in the accuracy of our dataset, and it is best used for coarse estimates of presence and extent. The dataset includes 685 spatially distinct meadows across the Strait of Georgia Bioregion as well as in the southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion (Figure \@ref(fig:studyareafig)).
+
+```{r eelgrasstable}
+df <- data.frame(
+  Source = c("British Columbia Marine Conservation Atlas", "Hakai Institue / Shorezone", "Islands Trust", "Community Mapping Network", "Personal observations"),
+  Coverage = c("coastwide", "coastwide (with gaps in the Strait of Georgia)", "Gulf Islands and Howe Sound", "coastwide (but used just Tsawwassen and Boundary Bay polygons)", "West and North Vancouver"),
+  Dates = c("1890-2010", "1992-2017", "2012-2014", "unknown", "2016"),
+  Access = c("bcmca.ca", "catalogue.hakai.org", "islandstrust.bc.ca (restricted)", "cmnbc.ca/atlasgallery/eelgrass-bed-mapping", "request from author")
+  )
+
+kbl(df, "latex", align="cl", booktabs = TRUE, caption = "Eelgrass spatial data sources",
+    col.names = c("Eelgrass dataset source", "Coverage", "Dates", "Access"),
+    linesep = "\\addlinespace",
+    position='h'
+    ) %>%
+  kable_styling(font_size=9) %>%
+  column_spec(1, latex_valign="m", width="15em") %>%
+  column_spec(2, latex_valign="m", width="10em") %>%
+  column_spec(3, latex_valign="m", width="5em") %>%
+  column_spec(4, latex_valign="m", width="10em") %>%
+  row_spec(0, bold=TRUE)
+```
 
 ```{r studyareafig, fig.pos="H", fig.cap = "Seagrass meadows in the Strait of Georgia Bioregion and southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion. The outlines of the meadow polygons are exaggerated for visualization purposes."}
 knitr::include_graphics(here::here("figures/01_studyarea.png"))
